# learn-electronics

./: .gitignore  README.md  dump-avr-timers.py  readme.md
avr/: readme.md
avr/code/cpp/EightSegmentLED/src/: counter.h  display.h  timers.h  writer.h
avr/posts/hello-world/01-multisegment-led/: readme.md
avr/posts/hello-world/05-multiplex/: readme.md
avr/posts/hello-world/06-blinky-led-rust-arduino/: readme.md
avr/posts/hello-world/07-multisegment-led-rust-arduino/: bugs.md  readme.md
avr/posts/hello-world/07-multisegment-led-rust-arduino/code/multisegment-led/avr/mseg-bin/: Cargo.toml
avr/posts/hello-world/07-multisegment-led-rust-arduino/code/multisegment-led/avr/mseg-test/: Cargo.toml
avr/posts/hello-world/08-rust-timers/: readme.md
avr/posts/hello-world/08-rust-timers/multisegment-led/mseg-bin/: Cargo.toml
avr/posts/hello-world/08-rust-timers/rust-timers/: avr-atmega328p.json
avr/posts/hello-world/09-six-segment-led/: readme.md
avr/posts/hello-world/10-bus-pirate/: readme.md
avr/posts/hello-world/11-custom-i2c-driver/: readme.md
avr/posts/hello-world/13-i2c-slave-driver/: readme.md
code/EightSegmentLED/: eight_segment_led.ino
code/EightSegmentLED/src/: charactermap.h  debug.h  led.h  ledwriter.h  runnable.h  tests.h
code/cpp/EightSegmentLED/: CMakeLists.txt
code/cpp/EightSegmentLED/src/: charactermap.h
code/rust/rustOnArduinoUnoTutorial/: original-tutorial.txt  readme.md
code/rust/rustOnArduinoUnoTutorial/rust-arduino-blink/: Cargo.toml
hello-world/01-multisegment-led/: readme.md
hello-world/02-multisegment-led-arduino-uno/: readme.md
hello-world/03-multi-segment-led-rotate/: readme.md
hello-world/04-multi-segment-characters/: readme.md
posts/hello-world/01-multisegment-led/: readme.md
posts/hello-world/02-multisegment-led-arduino-uno/: readme.md
posts/hello-world/03-multi-segment-led-rotate/: readme.md
posts/hello-world/04-multi-segment-characters/: readme.md
posts/hello-world/04-multi-segment-characters/resources/: eight_segment_led.ino
posts/hello-world/04a-code-structure/: readme.md
posts/hello-world/05-multiplex/: readme.md
posts/hello-world/05-multiplex/resources/: eight_segment_led.ino
posts/hello-world/06-blinky-led-rust-arduino/: readme.md
posts/hello-world/06-blinky-led-rust-arduino/code/rustOnArduinoUnoTutorial/: readme.md
posts/hello-world/07-multisegment-led-rust-arduino/: readme.md
posts/hello-world/07-multisegment-led-rust-arduino/code/multisegment-led/: Makefile
posts/hello-world/08-rust-timers/: readme.md
posts/hello-world/08-rust-timers/multisegment-led/: Makefile
posts/hello-world/08-rust-timers/rust-timers/: Cargo.toml  Makefile
posts/hello-world/08-rust-timers/rust-timers/.cargo/: config.toml
posts/hello-world/08-rust-timers/rust-timers/src/: main.rs
posts/hello-world/11-custom-i2c-driver/rust/i2c-led-driver/: Makefile
posts/hello-world/11-custom-i2c-driver/rust/i2c-led-driver/i2c-led-driver-bin/: Cargo.toml
posts/hello-world/11-custom-i2c-driver/rust/i2c-led-driver/i2c-led-driver-bin/src/: main.rs
posts/hello-world/11-custom-i2c-driver/sketches/master/: master.ino
posts/hello-world/12-rust-macros/: readme.md
src/EightSegmentLED/: CMakeLists.txt  eight_segment_led.ino
stm/: readme.md
(+41 files in other folders)
