[package]
name = "mseg-bin"
version = "0.1.0"
authors = ["ToddG <pub+github@zwrob.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# A panic handler is needed.  This is a crate with the most basic one.
panic-halt = "0.2.0"
arduino-uno = { git = "https://github.com/Rahix/avr-hal" }
mseg-lib = { path = "../mseg-lib" }
libc = "0.2"
array-init = "0.1.1"
arr_macro = "0.1.3"

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[dependencies.avr-device]
version = "0.2.2"
features = ["atmega328p"]
