[package]
name = "i2c-led-driver-bin"
version = "0.0.1"
authors = ["Todd Greenwood <pub+github@zwrob.com>"]
edition = "2018"

[dependencies]
# A panic handler is needed.  This is a crate with the most basic one.
panic-halt = "0.2.0"
arduino-uno = { git = "https://github.com/Rahix/avr-hal" }
ufmt = "0.1.0"

[dependencies.avr-device]
version = "0.2.2"
features = ["atmega328p"]

# Configure the build for minimal size
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

