[package]
name = "mseg-test"
version = "0.1.0"
authors = ["ToddG <pub+github@zwrob.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# A panic handler is needed.  This is a crate with the most basic one.
panic-halt = "0.2.0"
arduino-uno = { git = "https://github.com/Rahix/avr-hal" }
mseg-lib = { path = "../mseg-lib" }
